[build-system]
requires = ["setuptools>=61.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-launch-buttons"
version = "1.0.0"
description = "add custom launch buttons to jupyter-book"
long_description = """
TODO
"""
dependencies = [
    "sphinx",
    "ruamel.yaml"
]
requires-python = ">=3.9"
